service-spring-petclinic.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-petclinic
  namespace: petclinic1
  uid: 947c1f60-0997-4887-b30d-5badbdd138f2
  resourceVersion: '223553'
  creationTimestamp: '2022-03-18T14:10:51Z'
  labels:
    app: spring-petclinic
    app.kubernetes.io/component: spring-petclinic
    app.kubernetes.io/instance: spring-petclinic
    app.kubernetes.io/name: spring-petclinic
    app.kubernetes.io/part-of: spring-petclinic-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/robinmohandevoteam/spring-petclinic'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-03-18T14:10:51Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8778,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 10.217.5.50
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 10.217.5.50
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: spring-petclinic
    deploymentconfig: spring-petclinic
status:
  loadBalancer: {}
